# calculation_of_power_exponentiation_demo

./: .gitignore  CMakeLists.txt  README.md  completed_multi_thread_implementation.cpp  completed_opencl_implementation.cpp  completed_original.cpp  global_variables.h  helper_functions.cpp  helper_functions.h  main.cpp  multi_thread.h  multi_thread_implementation.cpp  opencl_implementation.cpp  opencl_implementation.h
